Changelog
=========

4.10-dev - (unreleased)
-----------------------
* Bug fix: Fixed events map JS
  [voineali #4798]

4.9 - (2011-12-07)
------------------
 * Bug fix: disabled press release text from pressroom view [ichimdav #4619]

4.8 - (2011-12-02)
------------------
* Bug fix: Made location, themes and subject language independant
  [voineali #4776]
* Bug fix: fix error that caused zope created ContentManager users not able to access site [tiberich]

4.7 - (2011-11-29)
------------------
* Bug fix: Fixed keywords widget to keep filled values if the edit form fails to
  submit due to validation errors
  [voineali #4773]
* Bug fix: fix problem caused by redirections for Manager when creating QuickEvent [tiberich #4763]

4.6 - (2011-11-28)
------------------
* Bug fix: Fixed required themes, subject and location fields for specified content-types
  [voineali #4694]
* Bug fix: show only date in event_view and quickevent_view [tiberich #4763]

4.5 - (2011-11-28)
------------------
* Bug fix: Show description widget in edit mode for a quickevent [ichimdav #4789]
* Bug fix: Fixed event_view to use the old location widget
  [voineali #4736]

4.4 - (2011-11-25)
------------------
* Bug fix: Reverted location field/widget for QuickEvent and Organisation to
  eea.locationwidget as there is a lot of custom logic and it needs upgrade
  steps (same for /events map)
  [voineali #4736]

4.3 - (2011-11-23)
------------------
* Change: commented the eea.locationwidget widget for QuickEvent, as it is
  already provided by the geotags subtyper [tiberich #4763]
* Change: add instruction when editing location widgets [tiberich #4763]
* Bug fix: hide metadata fields for quickevent [tiberich #4763]
* Bug fix: make all fields appear in the default schemata [tiberich #4763]
* Bug fix: show location when viewing a QuickEvent [tiberich #4763]

4.2 - (2011-11-22)
------------------
* Cleanup: Fixed all pylint, pyflakes warnings
  [voineali]